Update Svix logo and fix navbar alignment

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -33,6 +33,11 @@
   }
 }
 
+/* Fix search box not fitting inside the navbar */
+nav .aa-DetachedSearchButton {
+  height: 36px !important;
+}
+
 /* Better sidebar { */
 .menu a:not([href]).menu__link {
   margin-top: 1.5rem;
